# UAV-Saliency

./: CMakeLists.txt  README.md  calculate_contrast.m  contrast.cpp  contrast.h  contrast_demo.cpp  demo.m  yaml_test.cpp
config/: cfg.yaml
